--- a/MobileApp/app/src/main/res/values/strings.xml
+++ b/MobileApp/app/src/main/res/values/strings.xml
@@ -2,14 +2,14 @@
     <string name="app_name">ORP - Organizador Rápido de Pedidos</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_title">O app de comandas</string>
+    <string name="nav_header_subtitle">que vai revolucionar o seu restaurante!</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_home">Inicio</string>
+    <string name="menu_gallery">Cardapio</string>
+    <string name="menu_slideshow">Pedidos</string>
 
     <string name="home_second">Home Second</string>
     <string name="title_activity_login_restaurante">Entrar</string>
