--- a/MobileApp/app/src/main/res/values/strings.xml
+++ b/MobileApp/app/src/main/res/values/strings.xml
@@ -7,9 +7,9 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Inicio</string>
-    <string name="menu_gallery">Cardapio</string>
-    <string name="menu_slideshow">Pedidos</string>
+    <string name="menu_home">Cardapio</string>
+    <string name="menu_gallery">Pedidos</string>
+    <string name="menu_slideshow">Adicionar cardapio</string>
 
     <string name="home_second">Home Second</string>
     <string name="title_activity_login_restaurante">Entrar</string>
